correct text in ipynb

--- a/project_find_mistake.ipynb
+++ b/project_find_mistake.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "text.txt is a text file with a text to check\n",
-    "dictionary.txt is a text file with correct words separated by commas (e.g. \"chuj,gówno,luj,pluj,gnój\"\n",
+    "dictionary.txt is a text file with correct words separated by commas.\n",
     "This program will create new text file (new_text.txt) and will save there a corrected (or not) text from text.txt"
    ]
   },
